Fixed center alignment in ipad

--- a/client/baseStyles/Global.scss
+++ b/client/baseStyles/Global.scss
@@ -10,6 +10,7 @@
     width: 100%;
     height: 100%;
     align-items: center;
+    justify-content: center;
     flex-direction: column;
   }
 
